working on dynamic forms

--- a/projects/examples/src/app/pages/address-form/adress-form.component.html
+++ b/projects/examples/src/app/pages/address-form/adress-form.component.html
@@ -1,13 +1,9 @@
-<ng-container *seLet="gen; let value">
-  <h1>{{ value.data.id }}</h1>
-  <pre>{{ value | json }}</pre>
-</ng-container>
-<ng-container *seLet="data as obs">
-  <h1>{{ obs.name}}</h1>
-  <h1>{{ obs.data.id}}</h1>
-  {{ obs | json }}</ng-container
->
-
-
+<style>
+  :host {
+    width: 800px;
+    margin: 0 auto;
+    display: block;
+  }
+</style>
 <fui-dynamic-form [formConfig]="form1" #formEl></fui-dynamic-form>
-<button mat-button [disabled]="!formEl.valid">Submit</button>
+<button mat-button [disabled]="!formEl.valid" (click)="onFormSubmit()">Submit</button>
