--- a/projects/forms/src/lib/form-controls/select-ctrl/select-ctrl.component.html
+++ b/projects/forms/src/lib/form-controls/select-ctrl/select-ctrl.component.html
@@ -7,20 +7,10 @@
   }
 </style>
 <mat-form-field>
-  <mat-label>{{ field._metadata._label }}</mat-label>
-  <mat-select
-    [required]="field._metadata._required"
-    [compareWith]="compareItems"
-    [formControl]="formControl"
-  >
-    <mat-option *ngIf="!field._metadata._required" [value]="null"
-      >....</mat-option
-    >
-    <mat-option *ngFor="let opt of field._metadata._options" [value]="opt">{{
-      opt.label
-    }}</mat-option>
+  <mat-label>{{ field.label }}</mat-label>
+  <mat-select [required]="field.required" [compareWith]="compareItems" [formControl]="formControl">
+    <mat-option *ngIf="!field.required" [value]="null">....</mat-option>
+    <mat-option *ngFor="let opt of field._options" [value]="opt">{{ opt.label }}</mat-option>
   </mat-select>
-  <mat-hint *ngIf="field._metadata._hint"
-    >{{ field._metadata._hint }}
-  </mat-hint>
+  <mat-hint *ngIf="field.hint">{{ field.hint }} </mat-hint>
 </mat-form-field>
