--- a/projects/forms/src/lib/form-controls/textarea-ctrl/text-area-ctrl.component.html
+++ b/projects/forms/src/lib/form-controls/textarea-ctrl/text-area-ctrl.component.html
@@ -7,19 +7,17 @@
   }
 </style>
 <mat-form-field>
-  <mat-label>{{ field._metadata._label }}</mat-label>
+  <mat-label>{{ field.label }}</mat-label>
   <textarea
     type="text"
     autocomplete="off"
     matInput
     [formControl]="formControl"
-    [placeholder]="field._metadata._placeholder"
-    [rows]="field._metadata._rows"
-    [minlength]="field._metadata._minLength"
-    [maxLength]="field._metadata._maxLength"
-    [ngStyle]="{ resize: field._metadata._resizable ? 'horizontal' : 'none' }"
+    [placeholder]="field.placeholder"
+    [rows]="field._rows"
+    [minlength]="field.minLength"
+    [maxLength]="field.maxLength"
+    [ngStyle]="{ resize: field.resizable ? 'horizontal' : 'none' }"
   ></textarea>
-  <mat-hint *ngIf="field._metadata._hint"
-    >{{ field._metadata._hint }}
-  </mat-hint>
+  <mat-hint *ngIf="field.hint">{{ field.hint }} </mat-hint>
 </mat-form-field>
