--- a/projects/forms/src/lib/form-controls/number-ctrl/number-ctrl.component.html
+++ b/projects/forms/src/lib/form-controls/number-ctrl/number-ctrl.component.html
@@ -7,15 +7,15 @@
   }
 </style>
 <mat-form-field>
-  <mat-label>{{ field.label }}</mat-label>
+  <mat-label>{{ fieldConfig.label }}</mat-label>
   <input
     type="number"
     autocomplete="off"
     matInput
-    [placeholder]="field.placeholder"
+    [placeholder]="fieldConfig.placeholder"
     [formControl]="formControl"
-    [min]="field._min"
-    [max]="field._max"
+    [min]="fieldConfig._min"
+    [max]="fieldConfig._max"
   />
-  <mat-hint *ngIf="field.hint">{{ field.hint }} </mat-hint>
+  <mat-hint *ngIf="fieldConfig.hint">{{ fieldConfig.hint }} </mat-hint>
 </mat-form-field>
