--- a/projects/forms/src/lib/form-controls/text-ctrl/text-ctrl.component.html
+++ b/projects/forms/src/lib/form-controls/text-ctrl/text-ctrl.component.html
@@ -7,15 +7,15 @@
   }
 </style>
 <mat-form-field>
-  <mat-label>{{ field.label }}</mat-label>
+  <mat-label>{{ fieldConfig.label }}</mat-label>
   <input
     type="text"
     autocomplete="off"
     matInput
-    [placeholder]="field.placeholder"
+    [placeholder]="fieldConfig.placeholder"
     [formControl]="formControl"
-    [minlength]="field.minLength"
-    [maxLength]="field.maxLength"
+    [minlength]="fieldConfig.minLength"
+    [maxLength]="fieldConfig.maxLength"
   />
-  <mat-hint *ngIf="field.hint">{{ field.hint }} </mat-hint>
+  <mat-hint *ngIf="fieldConfig.hint">{{ fieldConfig.hint }} </mat-hint>
 </mat-form-field>
