added more example-pages

--- a/projects/forms/src/lib/form-controls/number-ctrl/number-ctrl.component.html
+++ b/projects/forms/src/lib/form-controls/number-ctrl/number-ctrl.component.html
@@ -16,6 +16,7 @@
     [formControl]="formControl"
     [min]="fieldConfig._min"
     [max]="fieldConfig._max"
+    [required]="fieldConfig.required"
   />
   <mat-hint *ngIf="fieldConfig.hint">{{ fieldConfig.hint }} </mat-hint>
 </mat-form-field>
