added more controls

--- a/projects/examples/src/app/pages/check-box/check-box.component.html
+++ b/projects/examples/src/app/pages/check-box/check-box.component.html
@@ -1,1 +1,4 @@
 <p>check-box works!</p>
+<fui-dynamic-form [formConfig]="inder"></fui-dynamic-form>
+<h1>Disabled</h1>
+<fui-dynamic-form [formConfig]="disabled"></fui-dynamic-form>
