--- a/projects/forms/src/lib/form/dynamic-form.component.html
+++ b/projects/forms/src/lib/form/dynamic-form.component.html
@@ -1,1 +1,4 @@
 <ng-template #formFields></ng-template>
+<pre *ngIf="showDebugger && formImpl" id="dynamic-form-debugger">
+  {{ currentDebugModel | json }}
+</pre>
